implement strike and Add new Task method

--- a/src/components/todo-list/TodoList.css
+++ b/src/components/todo-list/TodoList.css
@@ -4,5 +4,10 @@
 }
 
 #todo-title {
-  background: gold
+  background-color: aqua;
+  text-align: center
+}
+
+.done {
+  text-decoration: line-through;
 }
